
- #11338: Turn some partial application warnings into hints.
  (Leo White, review by Stephen Dolan)

- #10911: Improve the location reported by parenthesized assert expressions
  (Fabian Hemmer, review by Gabriel Scherer)

- #1391, #7645, #3922: Add an early error when compiling different
  modules with mismatching -for-pack
  (Pierre Chambart and Vincent Laviron, review by Mark Shinwell)

- #11646: Add colors to error message hints.
  (Christiana Anthony, review by Florian Angeletti)

- #11653: Add the -no-absname option to ocamlc, ocamlopt and ocamldep.
  (Abiola Abdulsalam, review by Sébastien Hinderer and Florian Angeletti)

- #11696: Add the -no-g option to ocamlc and ocamlopt.
  (Abiola Abdulsalam, review by Sébastien Hinderer, Nicolás Ojeda Bär and
  Florian Angeletti)

- #11722: clearer error messages on non-well-founded type definitions
  (Gabriel Scherer, review by Jacques Garrigue)

- #11819: make the `native_compiler` and `native_dynlink` configuration
  variables available through ocamlc -config.
  (Sébastien Hinderer, review by Gabriel Scherer and David Allsopp)

### Internal/compiler-libs changes:

- #11847, #11849, #11851: small refactorings in the type checker
  (Gabriel Scherer, review by Nicolás Ojeda Bär)

- #11027: Separate typing counter-examples from type_pat into retype_pat;
  type_pat is no longer in CPS.
  (Jacques Garrigue and Takafumi Saikawa, review by Gabriel Scherer)

- #11018: Clean up Types.Variance, adding a description of the lattice used,
  and defining explicitly composition.
  (Jacques Garrigue, review by Gabriel Scherer)

- #11286, #11515: disambiguate identifiers by using how recently they have
  been bound in the current environment
  (Florian Angeletti, review by Gabriel Scherer)

- #11364: Allow `make -C testsuite promote` to take `TEST` and `LIST` variables
  (Antal Spector-Zabusky, review by Gabriel Scherer and David Allsopp)

- #11446: document switch compilation (lambda/switch.ml)